--- a/fortysecondscv.cls
+++ b/fortysecondscv.cls
@@ -363,7 +363,7 @@
 \newcommand*{\cvsite}[1]{\cvcustomdata{\faGlobe}{\href{#1}{#1}}}
 \newcommand*{\cvmail}[1]{\cvcustomdata{\faAt}{\href{mailto:#1}{#1}}}
 \newcommand*{\cvkey}[2]{\cvcustomdata{\faKey}{%
-	\href{https://keyserver.ubuntu.com/pks/lookup?search=#2\&op=vindex\&fingerprint=on}{#1}%
+	\href{https://keys.openpgp.org/search?q=#2\&op=vindex\&fingerprint=on}{#1}%
 }}
 
 % TODO find a cleaner solution for consistent spacing
