--- a/template.tex
+++ b/template.tex
@@ -130,13 +130,13 @@
 % phone number
 \cvphone{+31 627 474 802}
 % personal website
-% \cvsite{https://pandascience.net}
+\cvsite{https://linkedin.com/in/cpansegrouw}
 % email address
 \cvmail{cpansegrouw@gmail.com}
 % pgp key
-%\cvkey{4096R/FF00FF00}{0xAABBCCDDFF00FF00}
+\cvkey{4096R/7613EB7A}{95B5685712F056FC50D48532971F86F37613EB7A}
 % any other custom entry
-%\cvcustomdata{\faFlag}{Chinese}
+\cvcustomdata{\faFlag}{South-African}
 
 %-------------------------------------------------------------------------------
 %                              SIDEBAR 1st PAGE
@@ -147,21 +147,11 @@
 	% naming according to ISO 3166-1 alpha-2 country codes
 	\graphicspath{{pics/gosquared-flags/flags/flags-iso/shiny/64}}
 
-	% social network accounts incl. proper hyperlinks
-%	\sidesection{Social Network}
-%		\begin{icontable}{2.5em}{1em}
-%			\social{\faLeaf}
-%				{https://de.overleaf.com/latex/templates/forty-seconds-cv/pztcktmyngsk}
-%				{Overleaf Template Link}
-%			\social{\faGithub}
-%				{https://github.com/PandaScience/FortySecondsCV}
-%				{Github Project Page Link}
-%		\end{icontable}
 
 	\sidesection{Languages}
 		\pointskill{\flag{GB.png}}{English}{5}
 		\pointskill{\flag{ZA.png}}{Afrikaans}{5}
-		\pointskill{\flag{NL.png}}{Dutch}{2}
+		\pointskill{\flag{NL.png}}{Dutch}{3}
 		\pointskill{\flag{DE.png}}{German}{1}
 
 
@@ -172,6 +162,7 @@
 		\skill{\faDatabase}{MySql, Postgress}
 		\skill{\faLinux}{Linux}
 		\skill{\faDocker}{Docker, Nomad}
+		\skill{\faCreditCard}{Card payments (ISO8583,EMV,PCI)}
 
 	\sidesection{Soft Skills}
 		\skill{\faChartLine}{Self-directed and proactive}
@@ -195,16 +186,8 @@
 \addtobacksidebar{
 	\sidesection{About Me}
 	\aboutme{
-		Accomplished software engineer with over 2 decades of experience in all facets of software development. During my career, I have been part of various founding teams for startups as well as part of teams for large established organisations. For the past 12 years, my career has been largely focused on fintech with a focus on in-person card acquiring on high volume platforms.
+		Accomplished software engineer with over 2 decades of experience in all facets of software development. Throughout my career I have been part of various founding teams for startups as well as part of teams for large established organisations. For the past 12 years, my career has been largely focused on fintech with a focus on in-person card acquiring on high volume platforms.
 	}
-
-
-	\sidesection{Education}
-		\skill{\faHome}{Self-directed and proactive}
-		\skill{\faChild}{Collaboration and coordination}
-		\skill{\faChild}{Leadership, mentorship and coaching}
-		\skill{\faChild}{Resilience and adaptability}
-		\skill{\faChild}{Knowledge sharing and curiosity}
 
 
 		\sidesection{Other Interests}
@@ -214,50 +197,7 @@
 		\skill{\faMountain}{Outdoors, hiking}
 		\skill{\faUtensils}{Cooking}
 
-% 	\sidesection{Diagrams}
-% 	\begin{sidebarminipage}
-% 		\chartlabel[pastelgreen]{Bubble}
-% 		\chartlabel[pastelgreen]{Diagrams}
-% 		\chartlabel[pastelpurple]{with}
-% 		\chartlabel[pastelpurple]{proper}
-% 		\chartlabel[pastelorange]{overflow}
-% 		\chartlabel[pastelorange]{protection}
-% 		\chartlabel[pastelyellow]{for}
-% 		\chartlabel[pastelyellow]{labels}
-% 	\end{sidebarminipage}
-%
-% 	\begin{figure}\centering
-% 		\smartdiagram[bubble diagram]{
-% 			\textcolor{white}{\textbf{Being a}} \\
-% 			\textcolor{white}{\textbf{Panda}}, % center bubble
-% 			\textcolor{black!90}{Eating},
-% 			\textcolor{black!90}{Sleeping},
-% 			\textcolor{black!90}{Rolling},
-% 			\textcolor{black!90}{Playing},
-% 			\textcolor{black!90}{Chilling}
-% 		}
-% 	\end{figure}
-%
-% 	\chartlabel{Wheel Chart}
-%
-% 	\wheelchart{3.7em}{2em}{%
-% 	20/3em/maincolor!50/Chill,
-% 	15/3em/maincolor!15/Play,
-% 	30/4em/maincolor!40/Sleep,
-% 	20/3em/maincolor!20/Eat
-% 	}
-%
-% 	\sidesection{Barskills}
-% 	\barskill[1ex]{\faSkyatlas}{Wearing asian rice hats}{60}
-% 	\barskill[2ex]{\faImage}{Playing Chess}{30}
-% 	\barskill[3ex]{\faMusic}{Playing the bamboo flute}{50}
-%
-% 	\sidesection{Memberships}
-% 	\begin{memberships}
-% 		\membership[4em]{pics/logo.png}{PandaScience.net}
-% 		\membership[4em]{pics/logo.png}{Some longer text spanning over more than
-% 			only one line}
-% 	\end{memberships}
+
 }
 
 
@@ -272,30 +212,25 @@
 \begin{cvtable}[2]
 
 
-	\cvitem{currently}{Java Team Lead//Deputy CTO}{Exipay Technologies | Netherlands | Fully Remote}{Responsible for establishing a development team to build a multi-tenant in-person card acceptance switching platform, designing the overall switching platform, support and business operations functionality, and orchestrating engineering and development activities to build the company's product and launch in late 2022.
-Establish a business operations team to support platform customers and perform BAU functions.
-Also part of the development engineering team to stay close to the implementation details and provide technical support in all areas of the platform.
-My time split is around 30 on software development and 70 on team management and business operational tasks}
+	\cvitem{currently}{Java Team Lead / Deputy CTO}{Exipay Technologies | Netherlands | Fully Remote}{Exipay is a technology provider and technical partner to Payment Service Providers, providing card acquiring solutions to customers via payment terminals and e-commerce solutions. I am responsible for establishing the development team to build a multi-tenant in-person card acceptance switching platform as well as  designing the overall platform and orchestrating engineering and development activities to build the company's product that launch in late 2022.\newline
+I also established the business operations team to support platform customers and perform BAU functions.\newline
+Im also part of the development engineering team to stay close to the implementation details and provide technical support in all areas of the platform.
+My time will be split approximately 30\% on software development and 70\% on team management and business operations tasks.}
 
 	\cvitem{05/2021 -- 06/2022}{
-Senior Software Engineer//Team lead}{onoConnect, Yoco Group | Netherlands | Fully Remote}{
-OnoConnect was a PSP enabling Yoco to rapidly roll out new fleets of terminal models to their growing merchant base and enable transaction process via multipile acquirer routes in South-Africa. The platform deployment was managed as a muti-region active-active deployment on Azure with Hashicorp stack. Responsibilities :
-\begin{itemize}
- \item Terminal Management Service (config managment, key management and remote key injection)
- \item Cryptographic service (importing, exporting, key injection and cryptogram management)
- \item ISO8583 integration services in various acquirers
-\end{itemize}
-		}
-	\cvitem{02/2019 -- 04/2022}{Java Developer}{Self-employed | South-Africa | Hybrid}{Independent java software development. I worked on in-person card payment acceptance systems and on IOT retail solution that turns retail shelves into data rich environments by using the latest in AI and machine learning together with sensors and smart devices.}
+Java Developer / Team lead}{onoConnect, Yoco Group | Netherlands | Fully Remote}{
+OnoConnect was a PSP that enabled Yoco to rapidly roll out new fleets of terminal models to its growing merchant base and enable transaction processing across multiple acquirer routes in South Africa. The platform deployment was managed as a multi-region active-active deployment on Azure using the Hashicorp stack. My responsibilities focused on; Terminal Management Service (configuration management, key management and remote key injection). Cryptographic services (HSM integration, HSM management, key import, key export and cryptogram storage management). ISO8583 integration services in various acquirers.}
 
-		\cvitem{09/2012 -- 02/2019}{Java Developer / Team Lead}{Thumbzup | South-Africa | On-premise}{Development and design of software platforms and systems.\newline
-Recruit, mentor and manage resources, deal with operational meetings (internally and externally), write proposals and manage projects.\newline
-Input into business development and international expansion of the business.\newline
-Building of a strong R<and>D, solution implementation and execution culture.\newline
-Evangelist / industry expert in the field in which the business operates.}
+	\cvitem{02/2019 -- 04/2022}{Java Developer}{Self-employed | South-Africa | Hybrid}{Independent Java software development consultant, working on in-person card payment acceptance systems and IOT retail solution that transforms retail shelves into data-rich environments using the latest in AI and machine learning along with sensors and smart devices.}
 
-		\cvitem{09/2011-- 19/2012}{Java Developer}{Pocit | South-Africa | On-premise}{The business has changed its strategy from focusing on mobile person-to-person payments, to being a bill presentment platform company. }
+		\cvitem{09/2012 -- 02/2019}{Java Developer / Team Lead}{Thumbzup | South-Africa | On-premise}{Thumzbup was an early provider of mPos solutions to the South African market and also provided its own payment terminal hardware. My role was to establish and build the payment platform to process in-person card payments. Later, additional responsibilities included building a software team to further develop the platform and support the growing client base.
+}
 
+		\cvitem{09/2011-- 19/2012}{Java Developer}{Pocit | South-Africa | On-premise}{Pocit offered one of the first mobile money products in South Africa, allowing users to send money from an e-wallet linked to their mobile number using mobile network USSD commands.  }
+
+			\cvitem{04/2008 -- 09/2011}{Java Developer}{Momentum | South-Africa | On-premise}{
+	Momentum is a large financial services provider of healthcare, insurance and investment solutions. I was part of a team of 20 software developers responsible for maintenance, enhancements and product features on the system in the pension products. The system consists of Tibco Staffware to drive the workflow. The different steps in a workflow can use JSF and/or EJB depending on the business requirement.
+    Major contribution was the design \& implementation of the tax policy integration with the South African Revenue Service. This system was later adopted by the majority of Momentum's business units.}
 
 \end{cvtable}
 
@@ -304,158 +239,38 @@ Evangelist / industry expert in the field in which the business operates.}
 
 \cvsection{}
 \begin{cvtable}[2]
-	\cvitem{04/2008 -- 09/2011}{Java Developer}{Momentum | South-Africa | On-premise}{
-	General maintenance on the system. System consists of Tibco Staffware to drive the workflow. The different steps on a workflow might use JSF and/or EJB depending on the business requirement.
-    Design <and> Implemented Tax directive implementation with SARS. (System to submit tax directives to SARS and process the responses into the business system) - this system would later be used by the majority of Momentum's business groups
-* Assisting junior developers. }
-
-	\cvitem{10/2007 -- 04/2008}{Java Developer}{Stracienta | South-Africa | On-premise}{Stracienta was a startup company with the aim to develop on online Strategy development and implementation management tool
-My responsibilies included.
-* Selection of the technology stack
-* Database design
-* Writing a high-level spec outlining the main functional components.
-* Software development}
-
-	\cvitem{08/2005 -- 10/2007}{Java Developer}{HealthBridge | South-Africa | On-premise}{* Development en Maintenance of Central Switch (Switching claims between doctors and medical aids.
-* Development and maintenance of online claim and reconciliation application for practice administrators. (www.mypractice.co.za)
-* Design and development of various support systems for the central switch.}
-
-	\cvitem{09/2003 -- 08/2005}{Java Developer}{Astrolabe group | South-Africa | On-premise}{Development of a API for a GSM Modem
-* Development <and> Onsite maintenance of FDP (Financial Document Processing) for ABSA Banks Check Division
-* Design and Developed Capture \ AutoCapture (OCR , ICR , OMR , Barcode Reading)
-* Team Leader on the Capture \ AutoCapture Projects
-* Maintain <and> new Development on Docserver (Document Repository System)
-* Development of a SDLC.
-* Assisting developers in applying defined standards and procedures (e.g. Coding standards)
-* Assisting developers on how to improve / enhance / refactor existing projects.}
 
 
-	\cvitem{10/2002 -- 08/2003}{Programmer}{New wave data services | South-Africa | On-premise}{Develop <and> Maintain Short-term Insurance Software System (IMS)
-* Development of Blue Bulls Company season ticket <and> test ticket systems.
-* Maintenance <and> Development for South African Police Force Orphan's Fund
-* Network <and> PC support
-* Telephone Recording Software (Java)
-* Automatic email update program for IMS
-* Background processing for opening MS-Word Mail-Merge Documents for IMS
-* Mail Administrator for NWDS Partners}
+	\cvitem{10/2007 -- 04/2008}{Java Developer}{Stracienta | South-Africa | On-premise}{Stracienta was a start-up company with the aim of developing an online strategy development and implementation management tool. My responsibilities included the selection of the technology stack, system design \& implementation.}
 
-	\cvitem{05/2001 -- 04/2001}{Pick Programmer}{Dimension Data | South-Africa | On-premise}{* Maintenance on the main pick system (Vehicle finance)
-* Working on Pick (D3) System, writing small programs to automate various processes.
-* Writing a VB <and> Web front-end for the Pick system.}
+	\cvitem{08/2005 -- 10/2007}{Java Developer}{HealthBridge | South-Africa | On-premise}{HealthBridge provides desktop software for medical practices in the South African market, which allows medical practices to submit patient medical claims for authorisation and approval to Medical Aids. Responsible for the development \& maintenance of the central switch and the development \& maintenance of an online claims \& reconciliation portal for practice administrators.}
+
+	\cvitem{09/2003 -- 08/2005}{Java Developer}{Astrolabe group | South-Africa | On-premise}{Astrolable was a software development company that provided custom software development to mostly financial service providers. My contribution to the projects focused on image processing to provide tools for image cropping and document processing with optical and intelligent character recognition. On non-custom projects my focus was on developing coding standards and procedures as well as research projects.}
+
+
+	\cvitem{10/2002 -- 08/2003}{Junior Programmer}{New wave data services | South-Africa | On-premise}{NWDS was a small software development company with only 4 employees that developed short term insurance software used by insurance brokers. In addition to the company's own software, we also provided software development expertise in Pick Basic for the Pick operating system, as well as general network and IT support. As a junior programmer I was thrown in everywhere.}
+
+	\cvitem{05/2001 -- 04/2001}{Junior Pick Programmer}{Dimension Data | South Africa | On-premise}{Dimension Data was a company that specialised in information technology services. I was placed with a banking client that provided vehicle finance services. My role was mainly to maintain the system. I was also tasked with researching how to provide a web based user interface for the mainframe terminal based system.}
 
 \end{cvtable}
 
 
-% \cvsection{Education}
-% \cvsubsection{Postgraduate Training}
-% \begin{cvtable}[1.5]
-% 	\cvitem{2009 -- 2010}{Post-Doc Panda Studies}{Panda Academy}
-% 		{In-depth studies on the impact of bamboo nutrition for young pandas and
-% 		its relation to relaxing, sleeping and snoozing parts of the day.}
-% 	\cvitem{2008 -- 2009}{Research Stay Europe}{European Panda Labs}
-% 		{Spending one year abroad teaching european panda facilities about the
-% 		newest findings and research in the field of asian rice hat covers and
-% 		applications for bamboo as a material.}
-% \end{cvtable}
+\cvsection{Education}
+\begin{cvtable}[2]
+	\cvitem{2002 -- 2003}{Van Zyl \& Prichards}{Java Entry Level Programming Diploma}
+		{Object orientated design, UML modeling , Java 1.4}
 
-%
-% \cvsubsection{Study}
-% \begin{cvtable}[1.5]
-% 	\cvitem{2006 -- 2008}{Master Studies Panda Science}{Panda Academy}
-% 		{Focus: Advanced rice hat studies and nouveau rain-reflecting cover
-% 		materials.}
-% 	\cvitem{}{Master Thesis ($\varnothing\, 1,0$)}{Asian Rice Hat Institute}
-% 		{Impact of solar radiation onto rice hat cover materials with special
-% 		attention to water resistance.}
-% 	\cvitem{2003 -- 2006}{Bachelor Studies PandaScience}{Panda Academy}
-% 		{Focus: Bamboo morphology and its usage in different craftmanships.}
-% 	\cvitem{}{Bachelor Thesis ($\varnothing\, 1,0$)}{Bamboo Institute}
-% 		{The bambo flute: An underestimated instrument in orchestras?}
-% \end{cvtable}
-
-% \cvsection{Publications}
-% \begin{cvtable}
-% 	\cvpubitem{Cooking: 100 recipes for lazy Pandas}{Me and My Panda Friends}
-% 		{Panda's Culinary World}{2010}
-% 	\cvpubitem{Pandastasia}{Still Me}{Bamboo Books Assoc.}{2005}
-% \end{cvtable}
-
-% \cvsection{Awards}
-% \begin{cvtable}
-% 	\cvitem{2010 -- now}{Panda of the Year}{Panda World Forum}{}
-% 	\cvitem{2005 -- now}{Face of World Wide Fund for Nature}{WWF}{}
-% 	\cvitem{2000}{Winner of Bamboo Sprouts Eating Contest}{Bamboo Society}{}
-% \end{cvtable}
-
-%
-% \cvsection{Extra-Curricular Activities}
-% \begin{cvtable}
-% 	\cvitemshort{Relaxing}{Master the fine art of relaxing everywhere}
-% 	\cvitemshort{Music}{Playing the bamboo flute in the 1st Panda Orchestra}
-% 	\cvitemshort{Education}{Teaching young pandas to be more panda-like}
-% \end{cvtable}
+	\cvitem{2000 -- 2002}{Computer Science Diploma}{CTI Education Group}
+		{Object \& Program Design, System Analysis \& Design , Database Design, Operating Systems 1 (Dos \&Windows) , Operating Systems 2 (Linux) Programming 1 (C/C++) , Programming 2 (Visual Basic)}
+\end{cvtable}
 
 
-% \newpage
-% \makebacksidebar
+\cvsection{Certifications}
+\begin{cvtable}[2]
+	\cvitemshort{2004}{Sun certified programmer for Java 1.4}
+	\cvitemshort{2005}{Sun certified buisness component developer for J2EE 1.3}
+	\cvitemshort{2010}{Sun certified programmer for Java 6}
 
-% \newgeometry{
-% 	top=\topbottommargin,
-% 	bottom=\topbottommargin,
-% 	right=\leftrightmargin,
-% 	left=\leftrightmargin
-% }
-
-% \cvsection{section}
-% \cvsubsection{Subsection}
-% \begin{cvtable}
-% 	\cvitem{<dates>}{<cv-item title>}{<location>}{<optional: description>}
-% \end{cvtable}
-%
-% \cvsection{cvitem}
-% \cvsubsection{Multi-line with longer description}
-% \begin{cvtable}
-% 	\cvitem{date}{Description}{location}{Some longer and more detailed
-% 		description, that takes two lines of space instead of only one.}
-% 	\cvitem{date}{Description}{location}{Some longer and more detailed
-% 		description, that takes two lines of space instead of only one.}
-% 	\cvitem{date}{Description}{location}{Some longer and more detailed
-% 		description, that takes two lines of space instead of only one.}
-% \end{cvtable}
-%
-% \cvsubsection{One-line without description}
-% \begin{cvtable}
-% 	\cvitem{Award}{One-line description}{Sponsor}{}
-% 	\cvitem{Award}{One-line description}{Sponsor}{}
-% 	\cvitem{Award}{One-line description}{Sponsor}{}
-% \end{cvtable}
-%
-% \cvsection{cvitemshort}
-% \cvsubsection{One-line}
-% \begin{cvtable}
-% 	\cvitemshort{Key}{Some further description}
-% 	\cvitemshort{Key}{Some further description}
-% 	\cvitemshort{Key}{Some further description}
-% \end{cvtable}
-%
-% \cvsubsection{Multi-line with longer description}
-% \begin{cvtable}
-% 	\cvitemshort{Key}{Some further description. Can fill even more than
-% 		only one single line while still keeping the correct indendation level.}
-% 	\cvitemshort{Key}{Some further description. Can fill even more than
-% 		only one single line while still keeping the correct indendation level.}
-% 	\cvitemshort{Key}{Some further description. Can fill even more than
-% 		only one single line while still keeping the correct indendation level.}
-% \end{cvtable}
-%
-% \cvsection{cvpubitem}
-% \begin{cvtable}
-% 	\cvpubitem{Publication title}{Authors}{Journal}{Year}
-% 	\cvpubitem{Publication title}{Authors}{Journal}{Year}
-% 	\cvpubitem{Publication title that is spanning over multiple lines and still
-% 		does not look too bad}{Authors}{Journal}{Year}
-% \end{cvtable}
-
-% \cvsignature
+\end{cvtable}
 
 \end{document}
