Profile picture update & minor updates

--- a/template.tex
+++ b/template.tex
@@ -118,7 +118,7 @@
 
 %% optional information
 % profile picture
-\cvprofilepic{pics/profile.png}
+\cvprofilepic{pics/linkedIn.jpeg}
 % logo picture
 % \cvlogopic{pics/logo_txt.png}
 
@@ -217,8 +217,7 @@ I also established the business operations team to support platform customers an
 Im also part of the development engineering team to stay close to the implementation details and provide technical support in all areas of the platform.
 My time will be split approximately 30\% on software development and 70\% on team management and business operations tasks.}
 
-	\cvitem{05/2021 -- 06/2022}{
-Java Developer / Team lead}{onoConnect, Yoco Group | Netherlands | Fully Remote}{
+	\cvitem{05/2021 -- 06/2022}{Java Developer / Team lead}{onoConnect, Yoco Group | Netherlands | Fully Remote}{
 OnoConnect was a PSP that enabled Yoco to rapidly roll out new fleets of terminal models to its growing merchant base and enable transaction processing across multiple acquirer routes in South Africa. The platform deployment was managed as a multi-region active-active deployment on Azure using the Hashicorp stack. My responsibilities focused on; Terminal Management Service (configuration management, key management and remote key injection). Cryptographic services (HSM integration, HSM management, key import, key export and cryptogram storage management). ISO8583 integration services in various acquirers.}
 
 	\cvitem{02/2019 -- 04/2022}{Java Developer}{Self-employed | South-Africa | Hybrid}{Independent Java software development consultant, working on in-person card payment acceptance systems and IOT retail solution that transforms retail shelves into data-rich environments using the latest in AI and machine learning along with sensors and smart devices.}
@@ -257,11 +256,10 @@ OnoConnect was a PSP that enabled Yoco to rapidly roll out new fleets of termina
 
 \cvsection{Education}
 \begin{cvtable}[2]
-	\cvitem{2002 -- 2003}{Van Zyl \& Prichards}{Java Entry Level Programming Diploma}
-		{Object orientated design, UML modeling , Java 1.4}
-
 	\cvitem{2000 -- 2002}{Computer Science Diploma}{CTI Education Group}
 		{Object \& Program Design, System Analysis \& Design , Database Design, Operating Systems 1 (Dos \&Windows) , Operating Systems 2 (Linux) Programming 1 (C/C++) , Programming 2 (Visual Basic)}
+	\cvitem{2002 -- 2003}{Van Zyl \& Prichards}{Java Entry Level Programming Diploma}
+		{Object orientated design, UML modeling , Java 1.4}
 \end{cvtable}
 
 
